--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.14",
+    "multer": "^1.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
