--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "sass": "sass --watch frontend/src/assets/styles/input.scss:frontend/src/assets/styles/output.css",
-    "devs": "concurrently \"npm run dev\" \"npm run sass\"",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "devs": "concurrently \"npm run dev\" \"npm run sass\""
   },
   "repository": {
     "type": "git",
