--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "10.16.0"
+  }
 }
